// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebViewScreen Instances FAQ matches snapshot 1`] = `
<iframe
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/faq-iframe"
  style={
    Object {
      "height": 844,
    }
  }
  title="FAQ"
  width="100%"
/>
`;

exports[`WebViewScreen Instances PrivacyPolicy matches snapshot 1`] = `
<iframe
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/pp/"
  style={
    Object {
      "height": 844,
    }
  }
  title="Privacy Policy"
  width="100%"
/>
`;

exports[`WebViewScreen Instances Support matches snapshot 1`] = `
<iframe
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/support-iframe/"
  style={
    Object {
      "height": 844,
    }
  }
  title="Feedback & Support"
  width="100%"
/>
`;

exports[`WebViewScreen Instances TermsOfUse matches snapshot 1`] = `
<iframe
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/dappterms/"
  style={
    Object {
      "height": 844,
    }
  }
  title="Privacy Policy & Terms"
  width="100%"
/>
`;

exports[`WebViewScreen matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  allowpaymentrequest="true"
  frameBorder="0"
  seamless={true}
  src="sourceUrl"
  style={
    Object {
      "borderBottomWidth": "0px",
      "borderLeftWidth": "0px",
      "borderRightWidth": "0px",
      "borderTopWidth": "0px",
      "height": "100%",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "width": "100%",
    }
  }
/>
`;

exports[`WebViewScreen matches snapshot 2`] = `
<iframe
  allowFullScreen={true}
  allowpaymentrequest="true"
  frameBorder="0"
  seamless={true}
  src="https://community.gooddollar.org/terms/"
  style={
    Object {
      "borderBottomWidth": "0px",
      "borderLeftWidth": "0px",
      "borderRightWidth": "0px",
      "borderTopWidth": "0px",
      "height": "100%",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "width": "100%",
    }
  }
/>
`;
